--- a/src/Postgaarden/PostgaardenGui/App.xaml
+++ b/src/Postgaarden/PostgaardenGui/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:PostgaardenGui"
-             StartupUri="MainWindow.xaml">
+             StartupUri="Login.xaml">
     <Application.Resources>
         <Style TargetType="TextBlock" x:Key="HeadLine1">
             <Setter Property="Margin" Value="4,10,0,0"></Setter>
