--- a/src/Postgaarden/PostgaardenGui/App.xaml
+++ b/src/Postgaarden/PostgaardenGui/App.xaml
@@ -2,6 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:PostgaardenGui"
+             xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
              StartupUri="Login.xaml">
     <Application.Resources>
         <Style TargetType="TextBlock" x:Key="HeadLine1">
@@ -36,6 +37,12 @@
             <Setter Property="HorizontalAlignment" Value="Left"></Setter>
         </Style>
 
+        <Style TargetType="xctk:DateTimePicker" x:Key="NormalDatePicker">
+            <Setter Property="Margin" Value="4"></Setter>
+            <Setter Property="TextAlignment" Value="Left"></Setter>
+            <Setter Property="HorizontalAlignment" Value="Stretch"></Setter>
+        </Style>
+
         <Style TargetType="TextBox" x:Key="StretchTextBox">
             <Setter Property="Margin" Value="4"></Setter>
             <Setter Property="HorizontalAlignment" Value="Stretch"></Setter>
@@ -62,6 +69,7 @@
 
         <Style TargetType="TextBlock" x:Key="TextBlockFormat">
             <Setter Property="Margin" Value="4"></Setter>
+            <Setter Property="HorizontalAlignment" Value="Left"></Setter>
         </Style>
     </Application.Resources>
 </Application>
