--- a/src/Postgaarden/PostgaardenGui/CreateEdit.xaml
+++ b/src/Postgaarden/PostgaardenGui/CreateEdit.xaml
@@ -6,56 +6,56 @@
         xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
         xmlns:local="clr-namespace:PostgaardenGui"
         mc:Ignorable="d"
-        Title="Create_Edit" SizeToContent="WidthAndHeight"
+        Title="Create_Edit" 
+        Width="370"
+        MinWidth="370"
+        Height="300"
+        MinHeight="300"
+        MaxHeight="300"
         DataContext="{Binding RelativeSource={RelativeSource Self}}"
         Loaded="Window_Loaded"
         WindowStyle="ToolWindow">
-    <Window.Resources>
-        <Style TargetType="Button" x:Key="NormalButton">
-            <Setter Property="Width" Value="100"></Setter>
-            <Setter Property="Margin" Value="4"></Setter>
-            <Setter Property="FontSize" Value="15"></Setter>
-            <Setter Property="FontWeight" Value="Light"></Setter>
-        </Style>
-    </Window.Resources>
-    <StackPanel >
-        <Grid>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="40"></RowDefinition>
-                <RowDefinition Height="*"></RowDefinition>
-            </Grid.RowDefinitions>
-            <TextBlock  Style="{StaticResource HeadLine1}" Name="CreateEditHeadline" DataContext="{Binding createEdit, UpdateSourceTrigger=PropertyChanged}"></TextBlock>
-            <StackPanel Grid.Row="1">
-                <StackPanel Orientation="Horizontal">
-                <TextBlock Style="{StaticResource TextBlockFormat}" Name="StartTimeTextBlock" Text="Start:" TextAlignment="Center"></TextBlock>
-                <xctk:DateTimePicker Name="StartTimePicker"></xctk:DateTimePicker>
-                </StackPanel>
-                <StackPanel Orientation="Horizontal">
-                    <TextBlock Style="{StaticResource TextBlockFormat}" Name="EndTimeTextBlock" Text="Slut:" TextAlignment="Center"></TextBlock>
-                    <xctk:DateTimePicker Name="EndTimeTextBox"></xctk:DateTimePicker>
-                </StackPanel>
-                <StackPanel Orientation="Horizontal">
-                    <TextBlock Style="{StaticResource TextBlockFormat}" Name="PriceTextBlock" Text="Pris:" TextAlignment="Center"></TextBlock>
-                    <TextBox Style="{StaticResource NormalTextBox}" Name="PriceTextBox"></TextBox>
-                </StackPanel>
-                <StackPanel Orientation="Horizontal">
-                    <TextBlock Style="{StaticResource TextBlockFormat}" Name="ConferenceRoomIdTextBlock" Text="Mødelokale:" TextAlignment="Center"></TextBlock>
-                    <TextBox Style="{StaticResource NormalTextBox}" Name="ConferenceRoomIdTextBox"></TextBox>
-                </StackPanel>
-                <StackPanel Orientation="Horizontal">
-                    <TextBlock Style="{StaticResource TextBlockFormat}" Name="CustomerCVRTextBlock" Text="KundeCVR" TextAlignment="Center"></TextBlock>
-                    <TextBox Style="{StaticResource NormalTextBox}" Name="CustomerCVRTextBox"></TextBox>
-                </StackPanel>
-                <StackPanel Orientation="Horizontal">
-                    <TextBlock Style="{StaticResource TextBlockFormat}" Name="EmployeeIdTextBlock" Text="Ansvarlig" TextAlignment="Center"></TextBlock>
-                    <TextBox Style="{StaticResource NormalTextBox}" Name="EmployeeIdTextBox"></TextBox>
-                </StackPanel>
-            </StackPanel>
+    <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="120"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="40"></RowDefinition>
+            <RowDefinition Height="30"></RowDefinition>
+            <RowDefinition Height="30"></RowDefinition>
+            <RowDefinition Height="30"></RowDefinition>
+            <RowDefinition Height="30"></RowDefinition>
+            <RowDefinition Height="30"></RowDefinition>
+            <RowDefinition Height="30"></RowDefinition>
+            <RowDefinition Height="30"></RowDefinition>
+        </Grid.RowDefinitions>
+        <TextBlock  Style="{StaticResource HeadLine1}" Name="CreateEditHeadline" Grid.ColumnSpan="2" DataContext="{Binding createEdit, UpdateSourceTrigger=PropertyChanged}"></TextBlock>
+
+        <TextBlock Style="{StaticResource TextBlockFormat}" Grid.Row="1" Grid.Column="0" Name="StartTimeTextBlock" Text="Start:" TextAlignment="Center"></TextBlock>
+        <xctk:DateTimePicker Name="StartTimePicker" Style="{StaticResource NormalDatePicker}" Grid.Row="1" Grid.Column="1"></xctk:DateTimePicker>
+
+        <TextBlock Style="{StaticResource TextBlockFormat}" Name="EndTimeTextBlock" Grid.Row="2" Grid.Column="0" Text="Slut:" TextAlignment="Center"></TextBlock>
+        <xctk:DateTimePicker Name="EndTimeTextBox" Style="{StaticResource NormalDatePicker}" Grid.Row="2" Grid.Column="1"></xctk:DateTimePicker>
+
+        <TextBlock Style="{StaticResource TextBlockFormat}" Grid.Row="3" Grid.Column="0" Name="PriceTextBlock" Text="Pris:" TextAlignment="Center"></TextBlock>
+        <TextBox Style="{StaticResource StretchTextBox}" Grid.Row="3" Grid.Column="1" Name="PriceTextBox"></TextBox>
+
+        <TextBlock Style="{StaticResource TextBlockFormat}" Name="ConferenceRoomIdTextBlock" Grid.Row="4" Grid.Column="0" Text="Mødelokale nr.:" TextAlignment="Center"></TextBlock>
+        <TextBox Style="{StaticResource StretchTextBox}" Grid.Row="4" Grid.Column="1" Name="ConferenceRoomIdTextBox"></TextBox>
+
+        <TextBlock Style="{StaticResource TextBlockFormat}" Grid.Row="5" Grid.Column="0" Name="CustomerCVRTextBlock" Text="Kunde CVR" TextAlignment="Center"></TextBlock>
+        <TextBox Style="{StaticResource StretchTextBox}" Grid.Row="5" Grid.Column="1" Name="CustomerCVRTextBox"></TextBox>
+
+        <TextBlock Style="{StaticResource TextBlockFormat}" Grid.Row="6" Grid.Column="0" Name="EmployeeIdTextBlock" Text="Medarbejder ID" TextAlignment="Center"></TextBlock>
+        <TextBox Style="{StaticResource StretchTextBox}" Grid.Row="6" Grid.Column="1"  Name="EmployeeIdTextBox"></TextBox>
+        <Grid Grid.Row="7" Grid.ColumnSpan="2">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            <Button Style="{StaticResource SmallButton}" Name="OKButton" Grid.Column="0" Content="OK" Click="OKButton_Click"></Button>
+            <Button Style="{StaticResource SmallButton}" Name="CancelButton" Grid.Column="1" Content="Annuller" Click="CancelButton_Click"></Button>
+        </Grid>
     </Grid>
-        <StackPanel Orientation="Horizontal">
-            <Button Style="{StaticResource NormalButton}" Name="OKButton" Content="OK" Click="OKButton_Click"></Button>
-            <Button Style="{StaticResource NormalButton}" Name="CancelButton" Content="Afslut" Click="CancelButton_Click"></Button>
-        </StackPanel>
-    </StackPanel>
-    
 </Window>
