--- a/src/Postgaarden/PostgaardenGui/Administration/Gui/CreateRoomWindow.xaml
+++ b/src/Postgaarden/PostgaardenGui/Administration/Gui/CreateRoomWindow.xaml
@@ -1,4 +1,6 @@
-﻿<Window x:Class="PostgaardenGui.Administration.Gui.CreateRoomWindow"
+﻿<!-- Written by Martin Hansen -->
+    
+<Window x:Class="PostgaardenGui.Administration.Gui.CreateRoomWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
